--- a/index/index.html
+++ b/index/index.html
@@ -42,7 +42,7 @@
         <div class="revw">
             <div class="wrap">
                 <p class="hd">편리해요!</p>
-                <p class="text">화장실 전체갈이 할때마다 스트레스였는데<br>좋은 거비스를 발견했네요!</p>
+                <p class="text">화장실 전체갈이 할때마다 스트레스였는데<br>좋은 서비스를 발견했네요!</p>
             </div>
         </div>
         <div class="nr">
