--- a/index/index.html
+++ b/index/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/godong2/style/reaset.css">
-    <link rel="stylesheet" href="/godong2/style/mobile.css">
+    <link rel="stylesheet" href="//style/reaset.css">
+    <link rel="stylesheet" href="/style/mobile.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
@@ -27,32 +27,32 @@
         </header>
         <div class="bn">
             <a href="">
-                <img src="/godong2/img/bn_1.jpg" alt="">
+                <img src="..//img/bn_1.jpg" alt="">
             </a>
         </div>
         <div class="tab">
             <div class="wrap">
-                <button><img src="/godong2/img/btn-01.jpg" alt=""></button>
+                <button><img src="..//img/btn-01.jpg" alt=""></button>
                 <div class="inner">
-                    <button><img src="/godong2/img/btn-02.jpg" alt=""></button>
-                    <button><img src="/godong2/img/btn-03.jpg" alt=""></button>
+                    <button><img src="/img/btn-02.jpg" alt=""></button>
+                    <button><img src="/img/btn-03.jpg" alt=""></button>
                 </div>
             </div>
         </div>
         <div class="revw">
             <div class="wrap">
                 <p class="hd">편리해요!</p>
-                <p class="text">화장실 전체갈이 할때마다 스트레스였는데<br>좋은 서비스를 발견했네요!</p>
+                <p class="text">화장실 전체갈이 할때마다 스트레스였는데<br>좋은 거비스를 발견했네요!</p>
             </div>
         </div>
         <div class="nr">
             <div class="wrap">
                 <h3><a href="#">이번주 신상모래</a></h3>
                 <div class="inner">
-                    <div class="item"><a href=""><img src="/godong2/img/item01.jpg" alt=""></a></div>
-                    <div class="item"><a href=""><img src="/godong2/img/item02.jpg" alt=""></a></div>
-                    <div class="item"><a href=""><img src="/godong2/img/item03.jpg" alt=""></a></div>
-                    <div class="item"><a href=""><img src="/godong2/img/item04.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="/img/item01.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="/img/item02.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="/img/item03.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="/img/item04.jpg" alt=""></a></div>
                 </div>
             </div>            
         </div>
@@ -60,10 +60,10 @@
             <div class="wrap">
                 <h3><a href="#">고동 top 10</a></h3>
                 <div class="inner">
-                    <div class="item"><a href=""><img src="/godong2/img/item04.jpg" alt=""></a></div>
-                    <div class="item"><a href=""><img src="/godong2/img/item03.jpg" alt=""></a></div>
-                    <div class="item"><a href=""><img src="/godong2/img/item01.jpg" alt=""></a></div>
-                    <div class="item"><a href=""><img src="/godong2/img/item02.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="/img/item04.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="/img/item03.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="/img/item01.jpg" alt=""></a></div>
+                    <div class="item"><a href=""><img src="/img/item02.jpg" alt=""></a></div>
                 </div>
             </div>            
         </div>
@@ -75,7 +75,7 @@
                     <div class="swiper-slide">
                         <div class="con">
                             <a href="">
-                                <img src="/godong2/img/promo01.jpg" alt="">
+                                <img src="/img/promo01.jpg" alt="">
                                 <h4>프리미엄 연료로 만든 지위픽</h4>
                                 <p> 지위픽은 청정국가 뉴질랜드에서 생산하는 브랜드입니다 생식에 가깝도록
                                     육류를 풍부하게 넣고 불필요한 탄수화물은 줄였습니다 뉴질랜드의 목초비육과
@@ -88,7 +88,7 @@
                     <div class="swiper-slide">
                         <div class="con">
                             <a href="">
-                                <img src="/godong2/img/item03.jpg" alt="">
+                                <img src="/img/item03.jpg" alt="">
                                 <h4>먼지 없는 쾌적함, 울트라 샌드</h4>
                                 <p> 지위픽은 청정국가 뉴질랜드에서 생산하는 브랜드입니다 생식에 가깝도록
                                     육류를 풍부하게 넣고 불필요한 탄수화물은 줄였습니다 뉴질랜드의 목초비육과
@@ -101,7 +101,7 @@
                     <div class="swiper-slide">
                         <div class="con">
                             <a href="">
-                                <img src="/godong2/img/item04.jpeg" alt="">
+                                <img src="/img/item04.jpeg" alt="">
                                 <h4>예민한 주인님을 위한 프리미엄 모래</h4>
                                 <p> 지위픽은 청정국가 뉴질랜드에서 생산하는 브랜드입니다 생식에 가깝도록
                                     육류를 풍부하게 넣고 불필요한 탄수화물은 줄였습니다 뉴질랜드의 목초비육과
