--- a/index/index.html
+++ b/index/index.html
@@ -27,12 +27,12 @@
         </header>
         <div class="bn">
             <a href="">
-                <img src="..//img/bn_1.jpg" alt="">
+                <img src="./img/bn_1.jpg" alt="">
             </a>
         </div>
         <div class="tab">
             <div class="wrap">
-                <button><img src="..//img/btn-01.jpg" alt=""></button>
+                <button><img src="./img/btn-01.jpg" alt=""></button>
                 <div class="inner">
                     <button><img src="/img/btn-02.jpg" alt=""></button>
                     <button><img src="/img/btn-03.jpg" alt=""></button>
